@@ -651,6 +651,12 @@ the first line may be left empty to make the text align better:
     Nisl rhoncus turpis est, vel elit, congue wisi enim nunc
     ultricies sit, magna tincidunt.
 .cE 0
+.SS Abbreviations
+Abbreviation definition lines are of the form:
+.cS
+*[HTML]: Hyper Text Markup Language
+.cE
+Abbreviation definition lines are passed through unaltered.
 .SH EXIT STATUS
 .PD 0
 .IP 0
