@@ -1,0 +1,8 @@
+This is the first sentence.  This is the second sentence.  This is the third
+sentence.
+
+*[HTML]: Hyper Text Markup Language
+*[W3C]:  World Wide Web Consortium
+
+This is the fourth sentence.  This is the fifth sentence.  This is the sixth
+sentence.
