@@ -5,6 +5,9 @@ See the end of the file for license conditions.
 
 * Changes in Wrap 4.2
 
+** Added PHP Markdown Extra HTML abbreviation support.
+Wrap and wrapc now support PHP Markdown Extra HTML abbreviations.
+
 ** Added PHP Markdown Extra definition list support.
 Wrap and wrapc now support PHP Markdown Extra definition lists.
 
